--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,8 @@
 {% extends "base.html" %}
+
+<!--landing page content-->
+{% block content %}
+<div class="container m-5 p-5">
+    <h1>Home</h1>
+</div>
+{% endblock %}
