--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,1 +1,8 @@
 {% extends "base.html" %}
+
+<!--menu content-->
+{% block content %}
+<div class="container m-5 p-5">
+    <h1>Menu</h1>
+</div>
+{% endblock %}
