--- a/templates/base.html
+++ b/templates/base.html
@@ -32,10 +32,10 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="{% url 'index' %}" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Menu</a>
+                        <a href="{% url 'menu' %}" class="nav-link">Menu</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Order Now</a>
