--- a/templates/base.html
+++ b/templates/base.html
@@ -9,19 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Curdine</title>
-    <style>
-        #map {
-            width: 100%;
-            height: 100%;
-            border-radius: 10px;
-        }
-    </style>
 </head>
 
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg py-3 fixed-top" style="background-color: #aad4b3;">
+    <nav id="navbar" class="navbar navbar-expand-lg py-3 fixed-top">
         <div class="container">
             <a href="#" class="navbar-brand text-white">Curdine</a>
 
@@ -30,7 +24,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navmenu">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto ">
                     <li class="nav-item">
                         <a href="{% url 'index' %}" class="nav-link">Home</a>
                     </li>
@@ -52,7 +46,7 @@
     </nav>
 
     <!-- Main Content -->
-    <main>
+    <main class="p-5">
         {% block content %}
         <!-- Content Goes here -->
         {% endblock content %}
@@ -83,7 +77,7 @@
     </div>
 
     <!--Footer-->
-    <footer class="mt-md-5 p-5 text-white text-center" style="background-color: #aad4b3;">
+    <footer class="p-3 mt-5 text-white text-center">
         <div class="container">
             <p class="lead">Copyright &copy; 2022 Curdine</p>
         </div>
