--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,7 +2,45 @@
 
 <!--menu content-->
 {% block content %}
-<div class="container m-5 p-5">
-    <h1>Menu</h1>
+<div class="container p-5">
+        <div class="class="col-12 mt-3">
+            <div class="row">
+                {% for food_item in food_item_list%}
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <div class="image-container">
+                                {% if "placeholder" in food_item.featured_image.url %}
+                                <img src="#" placeholder="Image of the food item" class="card-img-top">
+                                {% else %}
+                                <img src="{{food_item.featured_image.url}}" class="card-image-top">
+                                {% endif %}
+                            </div>
+                                <h2 class="card-title">{{ food_item }}</h2>
+                                <p>{{ food_item.description }}</p>
+                        </div>
+                    </div>
+                </div>
+                {% if forloop.counter|divisibleby:3 %}
+            {% endif %}
+            {% endfor %}
+        </div>
+    </div>
+    {% if is_paginated %}
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li>
+                <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</a>
+            </li>
+            {% endif %}
+            {% if page_obj.has_next %}
+            <li>
+                <a href="?page={{ page_obj.next_page_number }}" class="page-link">NEXT &raquo;</a>
+            </li>
+            {% endif %}
+        </ul>
+    </nav> 
+    {% endif %}
 </div>
 {% endblock %}
