--- a/templates/menu.html
+++ b/templates/menu.html
@@ -10,14 +10,15 @@
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="image-container">
-                                {% if "placeholder" in food_item.featured_image.url %}
-                                <img src="#" placeholder="Image of the food item" class="card-img-top">
+                                {% if "placeholder" in food_item.food_image.url %}
+                                <img src="https://images.pexels.com/photos/1583884/pexels-photo-1583884.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="card-img-top">
                                 {% else %}
-                                <img src="{{food_item.featured_image.url}}" class="card-image-top">
+                                <img src="{{food_item.featured_image.url}}" alt="Image of the food item" class="card-image-top">
                                 {% endif %}
                             </div>
                                 <h2 class="card-title">{{ food_item }}</h2>
                                 <p>{{ food_item.description }}</p>
+                                <p>&euro;{{ food_item.price }}</p>
                         </div>
                     </div>
                 </div>
@@ -28,16 +29,12 @@
     </div>
     {% if is_paginated %}
     <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
+        <ul class="pagination pagination-lg justify-content-center">
             {% if page_obj.has_previous %}
-            <li>
-                <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</a>
-            </li>
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;Previous</a></li>
             {% endif %}
             {% if page_obj.has_next %}
-            <li>
-                <a href="?page={{ page_obj.next_page_number }}" class="page-link">NEXT &raquo;</a>
-            </li>
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next&raquo;</a></li>
             {% endif %}
         </ul>
     </nav> 
