--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                         <a href="{% url 'menu' %}" class="nav-link">Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Order Now</a>
+                        <a href="{% url 'order' %}" class="nav-link">Order Now</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">About</a>
