--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 <!--landing page content-->
 {% block content %}
-<div class="container m-5 p-5">
+<div class="container p-5">
     <h1>Home</h1>
 </div>
 {% endblock %}
