--- a/templates/signupform.html
+++ b/templates/signupform.html
@@ -5,7 +5,7 @@
 
 <!--SignUp form-->
 <div class="container p-5">
-    <h1 class="text-center display-3 pb-2">Sign Up & Register Today!</h1>
+    <h1 class="text-center display-3 pb-2 pt-3">Sign Up & Register Today!</h1>
     <h3 class="text-center text-muted pb-3">Fill out the form below</h2>
     {% load crispy_forms_tags %}
     <form method="POST">
