--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                         <a href="{% url 'order' %}" class="nav-link">Order Now</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">About</a>
+                        <a href="{% url 'about' %}" class="nav-link">About</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
