Add home link to Logo test for user site navigation

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <!--Navbar-->
     <nav id="navbar" class="navbar navbar-expand-lg py-3 fixed-top">
         <div class="container">
-            <a href="#" class="navbar-brand text-white">Curdine</a>
+            <a href="{% url 'index' %}" class="navbar-brand text-white">Curdine</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
