--- a/templates/menu.html
+++ b/templates/menu.html
@@ -3,6 +3,7 @@
 <!--menu content-->
 {% block content %}
 <div class="container p-5">
+    <h1>Menu</h1>
         <div class="class="col-12 mt-3">
             <div class="row">
                 {% for food_item in food_item_list%}
