--- a/templates/order.html
+++ b/templates/order.html
@@ -2,44 +2,34 @@
 
 <!--Order page content-->
 {% block content %}
-<div class="container p-5">
-    <h1>Order Page</h1>
-</div>
-<div class="container mb-5">
-    <div class="row justify-content-center mt-1">
-        <div class="col-md-12 col-sm-12 p-4">
-            <form method="POST">
-                {% csrf_token %}
-                <div class="pt-5">
-                    {% for item in items %}
-                    <div class="row">
-                        <div class="col-md-2 col-sm-12">
-                            <div class="image-container">
-                                {% if "placeholder" in item.food_image.url %}
-                                <img src="https://images.pexels.com/photos/1583884/pexels-photo-1583884.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="card-img-top">
-                                {% else %}
-                                <img src="{{item.featured_image.url}}" alt="Image of the food item" class="card-image-top">
-                                {% endif %}
-                            </div>
-                        </div>
-                        <div class="col-md-8 col-sm-12">
-                            <div class="d-flex flex-row">
-                                <div class="form-group form-check">
-                                    <input type="checkbox" name="items[]" class="form-check-input" value="{{ item.pk }}">
-                                    <label class="form-check-label">{{ item }}</label>
-                                </div>
-                                <p class="font-weight-bold pl-5">&euro;{{ item.price }}</p>
-                            </div>
-                            <p>{{ item.description }}</p>
+<div class="p-5 container">
+<h1>Order Now</h1>
+    <form method="POST">
+        {% csrf_token %}
+        <div class="row row-cols-1 row-cols-md-3">
+            {% for item in items %}
+            <div class="col mb-4">
+                <div class="card m-4">
+                    {% if "placeholder" in item.food_image.url %}
+                    <img src="https://images.pexels.com/photos/1583884/pexels-photo-1583884.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        class="card-img-top rounded">
+                    {% else %}
+                    <img src="{{item.featured_image.url}}" alt="Image of the food item" class="card-image-top rounded">
+                    {% endif %}
+                    <div class="card-body">
+                        <h5 class="card-title">{{ item }}</h5>
+                        <p class="card-text">{{item.description}}</p>
+                        <p class="card-text">&euro;{{ item.price }}</p>
+                        <div class="form-group form-check">
+                            <label class="form-check-label"></label>
+                            <input type="checkbox" name="items[]" class="form-check-input" value="{{ item.pk }}">
                         </div>
                     </div>
-                    <hr />
-                {% endfor %}
                 </div>
-
-                <button class="btn btn-primary mt-5">Place Order!</button>
-            </form>
+            </div>
+            {% endfor %}
         </div>
-    </div>
+        <button class="btn btn-primary mt-5">Place Order!</button>
+    </form>
 </div>
 {% endblock %}
