--- a/templates/order.html
+++ b/templates/order.html
@@ -3,7 +3,7 @@
 <!--Order page content-->
 {% block content %}
 <div class="p-5 container">
-<h1>Order Now</h1>
+    <h1>Order Now</h1>
     <form method="POST">
         {% csrf_token %}
         <div class="row row-cols-1 row-cols-md-3">
@@ -28,6 +28,54 @@
                 </div>
             </div>
             {% endfor %}
+        </div>
+        <div class="form-group pt-3">
+            <label for="name">Full Name</label>
+            <input required class="form-control" type="text" name="name" value="{{ request.user.profile.name }}" />
+        </div>
+    
+        <div class="form-group pt-3">
+            <label for="name">Email Address</label>
+            <input required class="form-control" type="text" name="email" value="{{ request.user.profile.email }}" />
+        </div>
+    
+        <div class="form-group pt-3">
+            <label for="name">Contact Number</label>
+            <input required class="form-control" type="text" name="phone_number"
+                value="{{ request.user.profile.phone_number }}" />
+        </div>
+    
+        <div class="form-group pt-3">
+            <label for="name">Address 1</label>
+            <input required class="form-control" type="text" name="address1" value="{{ request.user.profile.address1 }}" />
+        </div>
+        <div class="form-group pt-3">
+            <label for="name">Address 2</label>
+            <input required class="form-control" type="text" name="address2" value="{{ request.user.profile.address2 }}" />
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group pt-3">
+                    <label for="name">City</label>
+                    <input required class="form-control" type="text" name="city" value="{{ request.user.profile.city }}" />
+                </div>
+            </div>
+    
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group pt-3">
+                    <label for="name">County</label>
+                    <input required class="form-control" type="text" name="county"
+                        value="{{ request.user.profile.county }}" />
+                </div>
+            </div>
+    
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group pt-3">
+                    <label for="name">Eir Code</label>
+                    <input required class="form-control" type="text" name="eir_code"
+                        value="{{ request.user.profile.eir_code }}" />
+                </div>
+            </div>
         </div>
         <button class="btn btn-primary mt-5">Place Order!</button>
     </form>
