--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <nav id="navbar" class="navbar navbar-expand-lg py-3 fixed-top">
         <div class="container">
             <a href="{% url 'index' %}" class="navbar-brand text-white">Curdine</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse"  id="navbarSupportedContent">
@@ -37,7 +37,7 @@
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             {{ user.profile.name }}
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
