--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 
 <!--landing page content-->
 {% block content %}
-<div class="container p-5 m-5">
+<div class="container p-5 mt-5">
     <h1>Login</h1>
     {% load crispy_forms_tags %}
     <form action="" method="POST">
