--- a/templates/order.html
+++ b/templates/order.html
@@ -33,34 +33,37 @@
             <label for="name">Full Name</label>
             <input required class="form-control" type="text" name="name" value="{{ request.user.profile.name }}" />
         </div>
-    
+
         <div class="form-group pt-3">
             <label for="name">Email Address</label>
             <input required class="form-control" type="text" name="email" value="{{ request.user.profile.email }}" />
         </div>
-    
+
         <div class="form-group pt-3">
             <label for="name">Contact Number</label>
             <input required class="form-control" type="text" name="phone_number"
                 value="{{ request.user.profile.phone_number }}" />
         </div>
-    
+
         <div class="form-group pt-3">
             <label for="name">Address 1</label>
-            <input required class="form-control" type="text" name="address1" value="{{ request.user.profile.address1 }}" />
+            <input required class="form-control" type="text" name="address1"
+                value="{{ request.user.profile.address1 }}" />
         </div>
         <div class="form-group pt-3">
             <label for="name">Address 2</label>
-            <input required class="form-control" type="text" name="address2" value="{{ request.user.profile.address2 }}" />
+            <input required class="form-control" type="text" name="address2"
+                value="{{ request.user.profile.address2 }}" />
         </div>
         <div class="row">
             <div class="col-md-4 col-sm-12">
                 <div class="form-group pt-3">
                     <label for="name">City</label>
-                    <input required class="form-control" type="text" name="city" value="{{ request.user.profile.city }}" />
+                    <input required class="form-control" type="text" name="city"
+                        value="{{ request.user.profile.city }}" />
                 </div>
             </div>
-    
+
             <div class="col-md-4 col-sm-12">
                 <div class="form-group pt-3">
                     <label for="name">County</label>
@@ -68,7 +71,7 @@
                         value="{{ request.user.profile.county }}" />
                 </div>
             </div>
-    
+
             <div class="col-md-4 col-sm-12">
                 <div class="form-group pt-3">
                     <label for="name">Eir Code</label>
@@ -77,7 +80,28 @@
                 </div>
             </div>
         </div>
-        <button class="btn btn-primary mt-5">Place Order!</button>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary mt-5" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Submit Order
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Submit My Order</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Go Back to
+                            Order</button>
+                        <button type="submit" class="btn btn-primary">Place Order!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </form>
 </div>
+
 {% endblock %}
