--- a/templates/profile_update.html
+++ b/templates/profile_update.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-<!--landing page content-->
+<!--Update Profile page content-->
 {% block content %}
 <div class="container p-5">
     <h1 class="text-center display-3 pb-2 pt-3">Update Profile Details</h1>
