--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                             {{ user.profile.name }}
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="#">Update Profile</a>
+                          <a class="dropdown-item" href="{% url 'update_profile' %}">Update Profile</a>
                           <div class="dropdown-divider"></div>
                           <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
                         </div>
