--- a/templates/profile_update.html
+++ b/templates/profile_update.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Go Back to
-                            Order</button>
+                            Updating Profile</button>
                             <button type="submit" class="btn btn-success">Apply Update!</button>
                     </div>
                 </div>
