--- a/templates/menu.html
+++ b/templates/menu.html
@@ -3,31 +3,32 @@
 <!--menu content-->
 {% block content %}
 <div class="container p-5">
-    <h1>Menu</h1>
+    <h1 class="mb-3">Menu</h1>
         <div class="class="col-12 mt-3">
             <div class="row">
                 {% for food_item in food_item_list%}
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <div class="card-body">
                             <div class="image-container">
                                 {% if "placeholder" in food_item.food_image.url %}
-                                <img src="https://images.pexels.com/photos/1583884/pexels-photo-1583884.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="card-img-top">
+                                <img src="https://images.pexels.com/photos/1583884/pexels-photo-1583884.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Image of the food item" class="card-img-top">
                                 {% else %}
-                                <img src="{{food_item.featured_image.url}}" alt="Image of the food item" class="card-image-top">
+                                <img src="{{food_item.food_image.url}}" alt="Image of the food item" class="card-image-top img-fluid">
                                 {% endif %}
                             </div>
+                            <div class="card-body">
                                 <h2 class="card-title">{{ food_item }}</h2>
-                                <p>{{ food_item.description }}</p>
-                                <p>&euro;{{ food_item.price }}</p>
-                        </div>
+                                <p class="card-text">{{ food_item.description }}</p>
+                                <p class="card-text">&euro;{{ food_item.price }}</p>
+                            </div>
                     </div>
                 </div>
                 {% if forloop.counter|divisibleby:3 %}
             {% endif %}
             {% endfor %}
+            </div>
         </div>
-    </div>
+    
     {% if is_paginated %}
     <nav aria-label="Page navigation">
         <ul class="pagination pagination-lg justify-content-center">
