--- a/templates/about.html
+++ b/templates/about.html
@@ -5,11 +5,13 @@
 <div class="container p-5">
     <h1>About Us</h1>
     <div class="container">
-        <p class="lead">
+        <p class="lead pb-5">
             {% for desc in about_text_body %}
             {{desc | safe}}
             {% endfor %}
+            <div class="pb-2">
+                <!--placeholder for sign up-->
+            </div>
         </p>
     </div>
-</div>
 {% endblock %}
