--- a/templates/menu.html
+++ b/templates/menu.html
@@ -9,13 +9,15 @@
                 {% for food_item in food_item_list%}
                 <div class="col-md-4">
                     <div class="card mb-4">
-                            <div class="image-container">
+                            <a href="{% url 'food_item' food_item.slug %}">
+                                <div class="image-container">
                                 {% if "placeholder" in food_item.food_image.url %}
                                 <img src="https://images.pexels.com/photos/1583884/pexels-photo-1583884.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Image of the food item" class="card-img-top">
                                 {% else %}
                                 <img src="{{food_item.food_image.url}}" alt="Image of the food item" class="card-image-top img-fluid">
                                 {% endif %}
                             </div>
+                            </a>
                             <div class="card-body">
                                 <h2 class="card-title">{{ food_item }}</h2>
                                 <p class="card-text">{{ food_item.description }}</p>
