--- a/templates/food_item.html
+++ b/templates/food_item.html
@@ -38,13 +38,13 @@
               {{ review.name }}
               <span class=" text-muted font-weight-normal">
                 <!-- The review's created date goes here -->
-                {{ review.created_on }}
+                {{ review.creation_date }}
               </span> wrote:
             </p>
             <!-- The body of the review goes before the | -->
             {{ review.body | linebreaks }}
           </div>
-          <!-- Our for loop ends here -->
+          <!-- for loop ends here -->
           {% endfor %}
         </div>
       </div>
@@ -68,8 +68,10 @@
             {% csrf_token %}
             <button type="submit" class="btn btn-success btn-lg">Submit</button>
           </form>
+          {% else %}
+          <p>Don't have an account?<a href="{% url 'signupform' %}">Signup here to leave a Review</a></p>
           {% endif %}
-          {% endif %}
+        {% endif %}
         </div>
       </div>
     </div>
