removed dropdown menu tag

--- a/templates/profile_update.html
+++ b/templates/profile_update.html
@@ -45,7 +45,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No I want to go back to
                         site</button>
-                    <button type="submit" class="btn btn-danger"><a class="dropdown-item" href="{% url 'delete' %}">Delete Profile</a></button>
+                    <button type="submit" class="btn btn-danger"><a href="{% url 'delete' %}">Delete Profile</a></button>
                 </div>
             </div>
         </div>
