--- a/templates/food_item.html
+++ b/templates/food_item.html
@@ -4,7 +4,7 @@
 {% block content %}
 {% load crispy_forms_tags %}
 <div class="container py-4">
-  <div class="p-5 mt-4 mb-4 bg-light rounded-3">
+  <div class="p-md-5 mt-4 mb-4 bg-light rounded-3">
     <div class="container-fluid py-5">
       <!--Food Item Name-->
       <h1 class="display-5 fw-bold">{{ item }}</h1>
@@ -12,9 +12,9 @@
       {% if "placeholder" in food_item.food_image.url %}
       <img
         src="https://images.pexels.com/photos/1583884/pexels-photo-1583884.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-        alt="Image of the food item" class="card-img-top">
+        alt="Image of the food item" class="card-img-top rounded">
       {% else %}
-      <img src="{{item.food_image.url}}" alt="Image of the food item" class="card-image-top img-fluid">
+      <img src="{{item.food_image.url}}" alt="Image of the food item" class="card-image-top img-fluid rounded">
       {% endif %}
     </div>
   </div>
@@ -27,22 +27,25 @@
     </div>
     <!--Food Item Reviews-->
     <div class="col-md-6 mb-3">
-      <div class="h-100 p-5 bg-light border rounded-3">
+      <div class="h-100 p-md-5 bg-light border rounded-3">
         <h2>Reviews</h2>
         <div class="card-body">
           <!-- We want a for loop inside the empty control tags to iterate through each review in reviews -->
           {% for review in reviews %}
-          <div style="padding: 10px;">
-            <p class="font-weight-bold">
-              <!-- The reviewer's name goes here. Check the model if you're not sure what that is -->
-              {{ review.name }}
-              <span class=" text-muted font-weight-normal">
-                <!-- The review's created date goes here -->
-                {{ review.creation_date }}
-              </span> wrote:
-            </p>
+          <div class="border border-1 border-dark m-3 p-2 rounded">
+            <!-- The reviewer's name goes here. Check the model if you're not sure what that is -->
+            <span class="fw-bold">
+            {{ review.name }}
+            </span>
+            <span class=" text-muted font-weight-normal">
+              <!-- The review's created date goes here -->
+              {{ review.creation_date }}
+            </span> wrote:
             <!-- The body of the review goes before the | -->
-            {{ review.body | linebreaks }}
+            <span class="fst-italic mt-5">{{ review.body | linebreaks }}</span>   
+            {% if review.name == user.username %}
+            <a href="{% url 'review_confirm_delete' review.id %}"><i class="bi bi-trash-fill"></i></a>
+            {% endif %}
           </div>
           <!-- for loop ends here -->
           {% endfor %}
@@ -52,7 +55,7 @@
     <!--Post Food Item Review-->
 
     <div class="col-md-12 mb-3">
-      <div class="h-100 p-5 bg-light rounded-3">
+      <div class="h-100 p-md-5 bg-light rounded-3">
         {% if reviewed %}
         <div class="card-body">
           <div class="alert alert-success" role="alert">
@@ -62,16 +65,19 @@
           {% if user.is_authenticated %}
           <h2>Why don't you tell us what you thought?</h2>
           <h3>Leave a review:</h3>
-          <p>Posting as: {{ user.profile.name }}</p>
+          <p>Posting as: {{ user.username }}</p>
           <form method="POST">
             {{ review_form | crispy }}
             {% csrf_token %}
             <button type="submit" class="btn btn-success btn-lg">Submit</button>
           </form>
           {% else %}
-          <p>Don't have an account?<a href="{% url 'signupform' %}">Signup here to leave a Review</a></p>
+          <div class="text-center">
+            <p class="lead">Don't have an account? <a href="{% url 'signupform' %}">Signup here to leave a Review</a>
+            </p>
+          </div>
           {% endif %}
-        {% endif %}
+          {% endif %}
         </div>
       </div>
     </div>
