--- a/templates/review_confirm_delete.html
+++ b/templates/review_confirm_delete.html
@@ -14,12 +14,12 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="deleteModalLabel">No thanks</h5>
+                        <h5 class="modal-title" id="deleteModalLabel">Delete your comment?</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No I changed my mind</button>
-                        <button type="submit" class="btn btn-danger onclick="history.back()"">Sure delete my comment</button>
+                        <button type="submit" class="btn btn-danger">Sure delete my comment</button>
                     </div>
                 </div>
             </div>
