--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script type="text/javascript" src="{% static 'script/script.js' %}"></script>
     <title>Curdine</title>
 </head>
 
@@ -59,7 +60,7 @@
         </div>
     </nav>
     <!-- Main Content -->
-    <main class="p-5">
+    <main class="py-5">
         {% include 'message.html' %}
         {% block content %}
         <!-- Content Goes here -->
@@ -120,22 +121,6 @@
     </script>
 
     <!--Google Maps script-->
-    <script>
-        function initMap() {
-            var location = {
-                lat: 39.7817213,
-                lng: -89.6501481
-            };
-            var map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 15,
-                center: location
-            });
-            var marker = new google.maps.Marker({
-                position: location,
-                map: map
-            });
-        }
-    </script>
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBebWvh7Q4MT7plcNIy6XbgG67akqcW7pw&callback=initMap">
     </script>
