--- a/templates/message.html
+++ b/templates/message.html
@@ -1,6 +1,6 @@
     <!--Messages-->
     {% for message in messages %}
-    <div class="alert {{ message.tags }} alert-dismissible fade show mt-5" role="alert">
+    <div class="alert {{ message.tags }} alert-dismissible fade show mt-5" id="msg" role="alert">
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
       </button>
       {{ message }}
