Validation clean up

--- a/templates/400.html
+++ b/templates/400.html
@@ -10,7 +10,7 @@
             <h3>400 (bad request)</h3>
             <p class="lead">Ooops something went wrong.
                 Please click on the link below to go back to the homepage
-                <a class="navbar-brand" href="{% url 'index' %}"><span class="brand">Link</a>
+                <a class="navbar-brand" href="{% url 'index' %}"><span class="brand">Link</span></a>
             </p>
         </div>
     </div>
