--- a/templates/menu.html
+++ b/templates/menu.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container p-5">
     <h1 class="mb-3">Menu</h1>
-        <div class="class="col-12 mt-3">
+        <div class="col-12 mt-3">
             <div class="row">
                 {% for food_item in food_item_list%}
                 <div class="col-md-4">
