--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 <div class="container p-5 mt-5">
     <h1>Login</h1>
     {% load crispy_forms_tags %}
-    <form action="" method="POST">
+    <form method="POST">
         {% csrf_token %}
         {% for field in form %}
             <div class="col-lg-6 col-md-12">
