--- a/templates/review_confirm_delete.html
+++ b/templates/review_confirm_delete.html
@@ -6,7 +6,7 @@
     <form method="post" class="mb-5 mt-5">
         {% csrf_token %}
         <div class="text-center">
-        <p class="fw-bold fs-3">Are you sure you want to delete</p><p class="lead"></p>"{{ review }}"?</p>
+        <p class="fw-bold fs-3">Are you sure you want to delete</p><p class="lead">"{{ review }}"?</p>
         <button type="button" class="btn btn-danger mb-5" data-bs-toggle="modal" data-bs-target="#deleteModal">Delete My Comment</button>
         </div>
         <!-- Delete Review Modal -->
