Add styling to the sign up here link

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
             {{desc | safe}}
             {% endfor %} </p>
         <div class="pb-2 text-center">
-            <p class="lead">Don't have an account? <a href="{% url 'signupform' %}">Signup here</a></p>
+            <p class="lead mt-5">Don't have an account? </p><a class=" text-decoration-none signup" href="{% url 'signupform' %}">Signup here</a>
         </div>
     </div>
 </div>
