Add aria label and label to input waves validation

--- a/templates/order.html
+++ b/templates/order.html
@@ -4,11 +4,11 @@
 {% block content %}
 <div class="p-5 container">
     <h1 class="mb-3">Order Now</h1>
-    <!-- Error message if no items selected -->
-    <div class="alert alert-danger alert-danger fade show d-none text-center mt-2" role="alert">
-        <strong>Holy Cheese!</strong> You have not selected food item!
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
+            <!-- Error message if no items selected trigger modal -->
+            <div class="alert alert-danger alert-danger fade show d-none text-center mt-2" role="alert">
+                <strong>Holy Cheese!</strong> You have not selected food item!
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
     <form id="sectionForm" method="POST">
         {% csrf_token %}
         <div class="row row-cols-1 row-cols-md-3">
@@ -23,12 +23,10 @@
                     {% endif %}
                     <div class="card-body">
                         <h2 class="card-title">{{ item }}</h2>
-                        <p class="card-text">{{item.description}}</p>
                         <p class="card-text">&euro;{{ item.price }}</p>
                         <div class="form-group form-check required">
-                            <label class="form-check-label"></label>
-                            <input type="checkbox" name="items[]" class="form-check-input" value="{{ item.pk }}"
-                                required>
+                            <label class="form-check-label" for="{{ item }}" id="checkLabel">{{ item }}</label>
+                            <input id="{{ item }}" type="checkbox" name="items[]" class="form-check-input" value="{{ item.pk }}" required aria-labelledby="checkLabel">
                         </div>
                     </div>
                 </div>
@@ -37,19 +35,17 @@
         </div>
         <div class="form-group pt-3">
             <label for="name">Full Name</label>
-            <input required class="form-control" id="name" type="text" name="name"
-                value="{{ request.user.profile.name }}" />
+            <input minlength required class="form-control" id="name" type="text" name="name" value="{{ request.user.profile.name }}" />
         </div>
 
         <div class="form-group pt-3">
             <label for="email">Email Address</label>
-            <input required class="form-control" id="email" type="text" name="email"
-                value="{{ request.user.profile.email }}" />
+            <input required class="form-control" id="email" type="text" name="email" value="{{ request.user.profile.email }}" />
         </div>
 
         <div class="form-group pt-3">
             <label for="phone_number">Contact Number</label>
-            <input required class="form-control" id="phone_number" type="text" name="phone_number"
+            <input required aria-required="true" class="form-control" id="phone_number" type="text" name="phone_number" maxlength="10"
                 value="{{ request.user.profile.phone_number }}" />
         </div>
 
@@ -88,8 +84,9 @@
                 </div>
             </div>
         </div>
+
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary mt-5" onClick="valthis()">
+        <button type="button" class="btn btn-primary mt-5" onClick="valthis();">
             Submit Order
         </button>
 
@@ -104,7 +101,7 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Go Back to
                             Order</button>
-                        <button onclick="form_submit()" class="btn btn-primary" type="submit">Place Order!</button>
+                        <button onclick="form_submit()"  class="btn btn-primary" type="submit">Place Order!</button>
                     </div>
                 </div>
             </div>
