--- a/templates/menu.html
+++ b/templates/menu.html
@@ -5,19 +5,16 @@
 <div class="container p-5">
     <h1 class="mb-3">Menu</h1>
         <div class="col-12 mt-3">
-            <div class="row">
+            <div class="row row-cols-1 row-cols-md-3">
                 {% for food_item in food_item_list%}
                 <div class="col-md-4">
                     <div class="card mb-4">
                             <a class="text-decoration-none text-dark" href="{% url 'food_item' food_item.slug %}">
-                                <div class="image-container text-center">
                                 {% if "placeholder" in food_item.food_image.url %}
                                 <img src="https://images.pexels.com/photos/1583884/pexels-photo-1583884.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Image of the food item" class="card-img-top img-fluid">
                                 {% else %}
                                 <img src="{{food_item.food_image.url}}" alt="Image of the food item" class="card-image-top w-100 rounded">
                                 {% endif %}
-                                </div>
-                            
                             <div class="card-body">
                                 <h2 class="card-title">{{ food_item }}</h2>
                             </a>
@@ -35,10 +32,10 @@
     <nav aria-label="Page navigation">
         <ul class="pagination pagination-lg justify-content-center">
             {% if page_obj.has_previous %}
-            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;Previous</a></li>
+            <li class="page-item"><a class="page-link paginationbtn" href="?page={{ page_obj.previous_page_number }}">&laquo;Previous</a></li>
             {% endif %}
             {% if page_obj.has_next %}
-            <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next&raquo;</a></li>
+            <li class="page-item"><a class="page-link paginationbtn" href="?page={{ page_obj.next_page_number }}">Next&raquo;</a></li>
             {% endif %}
         </ul>
     </nav> 
